force-app/main/default/objects/ILog__c/ILog__c.object-meta.xml
<CustomObject>
    <label>ILog</label>
    <nameField>
        <label>ILog Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ILogs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>