force-app/main/default/objects/ILog__c/fields/Interface__c.field-meta.xml
<CustomField>
    <fullName>Interface__c</fullName>
    <label>Interface</label>
    <referenceTo>Interfaces__c</referenceTo>
    <relationshipLabel>ILogs</relationshipLabel>
    <relationshipName>ILogs</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>